# KUN

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG-v2.3.md  COMMERCIAL_USE.md  CONTRIBUTING.md  Dockerfile  KUN-V1.docx  KUN-V1.md  LICENSE  Makefile  NOTICE  PROGRESS.md  README.md  SECURITY.md  alembic.ini  decisions.md  docker-compose.dev.yml  pyproject.toml
.github/workflows/: ci.yml
.kun/: ci-tiers.yaml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_nuo_schema.py  0003_core_check_constraints.py  0004_task_results.py  0005_pending_actions.py  0006_enable_rls.py  0007_app_role_rls.py  0008_harden_core_constraints.py  0009_composite_tenant_pks.py  0010_proactive_misses.py  0011_soul_files.py  0012_entity_relationships.py  0013_lab_adoption_cursor.py  0013_lab_recipe_registry.py  0014_lab_experiments.py  0015_prompt_templates.py  0015_protocols.py  0016_pheromone.py  0017_missions.py  0018_mission_operating_loop.py  0019_resource_credit_stats.py  0020_qi_problem_signals.py  0021_tenant_account_registry.py  0022_world_handler_controls.py  0023_world_action_executions.py  0024_world_action_idem.py  0024_world_action_idempotency_guard.py  0025_tenant_member_invite_tokens.py  0026_token_usage_audit.py  0027_state_ledger_entries.py  0028_tenant_password_credentials.py
artifacts/control_plane/: kun-v6-productization-dogfood.json  kun-v6-productization-final.json
data/lab_benchmarks/: code_refactor.yaml  decision_analysis.yaml  marketing_copy.yaml
docs/: CLAUDE_REVIEW_PACKET.md  CODEX_BRIEF.md  CODEX_BRIEF_BATCH3.md  CODEX_BRIEF_BATCH4.md  CODEX_BRIEF_BATCH5.md  CODEX_BRIEF_BATCH6.md  CODEX_BRIEF_BATCH7.md  COLLABORATION.md  DEPLOY.md  PROGRESS_VS_PLAN.md  PROMISES.md
docs/codex/: BATCH10.md  BATCH11.md  BATCH12.md  BATCH13.md  BATCH14.md  BATCH9.md  V5_COMPLETION_SPLIT.md
docs/legal/: IP_POLICY.md  PUBLIC_REPO_RISK.md
docs/ops/: dogfood-checklist.md  grafana-lab-dashboard.md  grafana-v23-dashboard.md  release-checklist-v2.3.md  release-checklist-v4.md  release-checklist-v5.md  release-checklist.md  runbook.md  v3-dogfood-scenarios.md
docs/v2/: KUN-V2.2-revisions.md  KUN-V2.3-spec.md  KUN-V2.4-spec.md  V2.2-implementation-audit.md  V2.3-TESTING-GUIDE.md  V2.3-implementation-audit.md
docs/v3/: KUN-V3.md  V3_DELIVERY_PLAN.md  V3_IMPLEMENTATION_AUDIT.md  V3_NEXT_SESSION_SPLIT.md
docs/v4/: KUN-V4.md
docs/v5/: KUN-V5.md
docs/v6/: CONVERSATION-LEARNING-20260517.md  KUN-V6-DEVELOPMENT-PLAN.md  KUN-V6.md
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/public/: kun-notifications-sw.js
frontend/src/: browserNotifications.ts  kunApiClient.ts
kun/: __init__.py  cli.py
kun/api/: __init__.py  attention_pin.py  billing_transparency.py  blackboard.py  blackboard_data_sources.py  chat.py  code_capability.py  compiler.py  control_plane.py  diagnose.py  execution_mode_classifier.py  feedback.py  graph.py  health.py  input_payload.py  lab.py  main.py  missions.py  project_constitution.py  protocols.py  qi.py  runtime.py  session.py  task_control.py  ws.py
kun/brain/: __init__.py  intent.py  planner.py  router.py
kun/compiler/: __init__.py  batch.py  ingestion.py  intake_review.py  internal_assets.py  markitdown.py  material.py  models.py  recompile.py  registry.py  review_queue.py  sync.py
kun/context/: __init__.py  assets.py  deduplicate.py  governance_audit.py  governance_distill.py  graph_metrics.py  graph_traversal.py  importance.py  maintenance.py  management.py  packer.py  seeds.py  storage.py
kun/control_plane/: __init__.py  activation.py  capability_evolution.py  capability_execution.py  capability_governance.py  cockpit.py  collaboration.py  daemon.py  daemon_service.py  external_sample_comparison.py  file_store.py  frontier50.py  frontier50_external.py  nuo.py  preflight.py  productization.py  progress.py  qi_ab.py  runtime.py  runtime_followups.py  store.py  supervisor.py  v6.py  watchtower_bridge.py  workspace_snapshot.py
kun/core/: __init__.py  anchor_expand.py  attention_anchor.py  bandit_router.py  config.py  db.py  emergent_solution.py  env_isolation.py  events.py  ids.py  logging.py  metrics.py  multi_task_scheduler.py  nats_subscriber.py  object_store.py  ooda_loop.py  orm.py  quota_tracker.py  scoring.py  state_ledger.py  strategy_matcher.py  task_panorama.py  tenancy.py  variable_registry.py
kun/datamodel/: __init__.py  capability.py  decision_ticket.py  events.py  handoff.py  layered_asset.py  mission.py  notification.py  project_constitution.py  prompt_template.py  relationship.py  runtime.py  soul_file.py  soul_file_provider.py  task.py  verification_spec.py  verification_templates.py
kun/engineering/: __init__.py  action_executor.py  agent_benchmark.py  agent_loop.py  asset_promoter.py  attention_budget.py  budget_tracker.py  capability_cache.py  capability_writeback.py  code_task_policy.py  concurrency.py  coordination_remediation.py  credit_assignment.py  cron_scheduler.py  delivery_status.py  dynamic_replan.py  early_error_detection.py  emergent_switch.py  execution_protocol.py  experiments.py  external_scan.py  fast_path.py  honesty.py  idle_batch.py  intent_clarifier.py  marginal_roi.py  memory_invocation_policy.py  mission_control.py  mission_reaper.py  mission_worker.py  multi_judge.py  notifications.py  nuo_system_health.py  ops_dogfood.py  orchestrator.py  panorama_builder.py  panorama_orchestrator_bridge.py  pending_task_resume.py  pre_deliver_gate.py  precipitation.py  (+9 more)
kun/infra/: grafana-dashboard-knowledge-graph.json  grafana-dashboard-kun-lab.json  grafana-dashboard-kun-v23.json  grafana-dashboards-provision.yaml  otel-collector.yaml  prometheus.yml
scripts/: backup_postgres.sh  backup_restore_drill.py  bootstrap.sh  check_legal_guard.py  dogfood_run.sh  dogfood_v23.sh  dogfood_v23_mock.py  dogfood_v3_ops_smoke.py  install_hooks.sh  install_kun_cli.sh  mint_auth_token.py  one_click_deploy.sh  push-workflow.sh  restore_postgres_smoke.sh
seeds/: context_assets.yaml
skills/: STARTER_PACK.md
tests/: conftest.py
(+465 files in other folders)
