[project]
name = "kun"
version = "0.1.0"
description = "鲲 (KUN) — Agent OS / Agent 管家，自运营 agent 调度平台"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Sylvan", email = "luzhu566@gmail.com" }]
license = { text = "Proprietary" }

dependencies = [
  # Web
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "websockets>=13.0",
  "httpx>=0.27.0",
  # Data
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "python-ulid>=3.0.0",
  # DB
  "sqlalchemy[asyncio]>=2.0.0",
  "asyncpg>=0.30.0",
  "alembic>=1.13.0",
  "redis[hiredis]>=5.2.0",
  # Vector
  "qdrant-client>=1.12.0",
  # Events
  "nats-py>=2.9.0",
  # LLM
  "anthropic>=0.40.0",
  "openai>=1.54.0",
  "tiktoken>=0.8.0",
  # Expression eval (守望规则引擎)
  "simpleeval>=1.0.0",
  "pyyaml>=6.0.0",
  # Observability
  "opentelemetry-api>=1.28.0",
  "opentelemetry-sdk>=1.28.0",
  "opentelemetry-instrumentation-fastapi>=0.49b0",
  "opentelemetry-instrumentation-httpx>=0.49b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.49b0",
  "opentelemetry-exporter-otlp>=1.28.0",
  "prometheus-client>=0.21.0",
  "structlog>=24.4.0",
  # Utility
  "tenacity>=9.0.0",
  "rich>=13.9.0",
  "typer>=0.13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "pytest-xdist>=3.6.0",
  "testcontainers[postgres,redis]>=4.8.0",
  "httpx>=0.27.0",
  "ruff>=0.8.0",
  "mypy>=1.13.0",
  "pre-commit>=4.0.0",
  "faker>=33.0.0",
  "freezegun>=1.5.0",
]

[project.scripts]
kun = "kun.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kun"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["kun", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "C4", "UP", "ASYNC", "S", "SIM", "RUF"]
ignore = [
  "S101",  # asserts OK
  "S104",  # 0.0.0.0 for local dev is intentional
  "S105",  # minio default creds for local dev
  "S106",  # same
  "S110",  # silent passes in cleanup paths are intentional
  "S311",  # random for bucketing, not crypto
  "S603",  # subprocess called with variable — expected by some skills
  "B008",  # typer Option() in defaults is idiomatic typer
  "B904",  # allow bare raise in some async contexts
  "E501",  # handled by formatter
  "RUF001", # allow CJK/fullwidth chars in identifiers (中文 docstrings)
  "RUF002", # same, in docstrings
  "RUF003", # same, in comments
  "N814",   # CamelCase-as-constant allowed for typing imports
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "B"]
"alembic/versions/**" = ["S", "B", "UP"]
"kun/cli.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["nats.*", "simpleeval.*", "qdrant_client.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "unit: unit tests (fast, no external deps)",
  "integration: integration tests (need docker services)",
  "e2e: end-to-end tests",
  "calibration: calibration task runs",
  "slow: slow tests (> 5s)",
]

[tool.coverage.run]
branch = true
source = ["kun"]
omit = ["*/tests/*", "*/alembic/*"]
